--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ dependency_scanning:
     - echo SnykProjName:${CI_PROJECT_DIR}:${CI_PROJECT_NAME}:${CI_PROJECT_PATH_SLUG}:${CI_PROJECT_PATH} # <--- We're adding these GitLab variables to the Snyk monitor command directly below
     
     - ./snyk auth $SNYK_TOKEN
-    - ./snyk monitor --org=$SNYK_ORG_ID --project-name=${CI_PROJECT_DIR} # <---the project name in Snyk UI will be <GitLab api url>:<GitLab commit SHA(short)>
+    - ./snyk monitor --org=$SNYK_ORG_ID --project-name=${CI_PROJECT_DIR} --remote-repo-url=${CI_PROJECT_DIR} # <---the project name in Snyk UI will be <GitLab api url>:<GitLab commit SHA(short)>
     - ./snyk code test --report --org=$SNYK_ORG_ID --project-name=${CI_PROJECT_DIR}
   
     #- snyk test --json --org=$SNYK_ORG_ID | snyk-to-html -o snyk_results.html
