--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,14 +3,15 @@ dependency_scanning:
   stage: test
   script:
     # Install npm, snyk, and snyk-to-html
-    #- npm install -g npm@latest
-    #- npm install -g snyk
-    #- npm install snyk-to-html -g
+    - sudo apt install nodejs
+    - npm install -g npm@latest
+    - npm install -g snyk
+    - npm install snyk-to-html -g
     # Run snyk help, snyk auth, snyk monitor, snyk test to break build and out report
 
-    #- snyk --help
-    - curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
-    - chmod +x ./snyk
+    - snyk --help
+    #- curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
+    #- chmod +x ./snyk
     - echo SnykProjName:${CI_PROJECT_DIR}:${CI_PROJECT_NAME}:${CI_PROJECT_PATH_SLUG}:${CI_PROJECT_PATH}:${CI_PROJECT_ROOT_NAMESPACE}:${CI_PROJECT_TITLE} # <--- We're adding these GitLab variables to the Snyk monitor command directly below
     
     - ./snyk auth $SNYK_TOKEN
