--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ dependency_scanning:
   stage: test
   script:
     # Install npm, snyk, and snyk-to-html
-    - curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-sudo apt-get install -y nodejs
+    - curl -sL https://deb.nodesource.com/setup_14.x | bash -
+apt-get install -y nodejs
     - npm install -g npm@latest
     - npm install -g snyk
     - npm install snyk-to-html -g
