--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,15 @@ dependency_scanning:
   image: antzsnyk/gradle-7.4.2-nodejs-20
   stage: test
   script:
-    # Install npm, snyk, and snyk-to-html
-    #- apt install 
+
     #- npm install -g npm@latest
+    - apt-get install jq
     - npm install -g snyk
     - npm install -g snyk-delta
     #- npm install snyk-to-html -g
     # Run snyk help, snyk auth, snyk monitor, snyk test to break build and out report
 
-    - snyk --help
+    #- snyk --help
     #- curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
     #- chmod +x ./snyk
     #- echo SnykProjName:${CI_PROJECT_DIR}:${CI_PROJECT_NAME}:${CI_PROJECT_PATH_SLUG}:${CI_PROJECT_PATH}:${CI_PROJECT_ROOT_NAMESPACE}:${CI_PROJECT_TITLE} # <--- We're adding these GitLab variables to the Snyk monitor command directly below
