--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ dependency_scanning:
   #- dpkg -x libc-bin*.deb /
   #- apt-get install --reinstall ./libc-bin*.deb
   #- apt-get install -y apt-utils
-  - apt-get install -y jq
+  #- apt-get install -y jq
+  - cpan Jq
 
   stage: test
   script:
