curl install of jq

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,8 @@ dependency_scanning:
   #- apt-get install --reinstall ./libc-bin*.deb
   #- apt-get install -y apt-utils
   #- apt-get install -y jq
-  - wget -O jq https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 \ 
-    && chmod +x ./jq \
-    && cp jq /usr/bin \
+  - curl https://stedolan.github.io/jq/download/linux64/jq > /usr/bin/jq && chmod +x /usr/bin/jq
+  - jq --help
 
   stage: test
   script:
