back to apt install for jq after switching to new gradle image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,7 @@ dependency_scanning:
   image: antzsnyk/gradle-7.6-nodejs-20
 
   before_script:
-  - curl https://github.com/jqlang/jq/releases/download/jq-1.5/jq-linux64 > /usr/bin/jq && chmod +x /usr/bin/jq
-  - ls -la /usr/bin/jq
-  - jq --version
-  - echo $?
+  - apt install jq
 
 #https://github.com/jqlang/jq/releases/download/jq-1.5/jq-linux64
 
