start w/ gradle-jdk-snyk image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
 dependency_scanning:
-  image: antzsnyk/gradle-7.6-nodejs-20
+  image: antzsnyk/gradle-snyk-nodejs-20:latest
 
   before_script:
-  - apt update && apt clean
-  - apt install -y jq
+  - npm install jq
 
 #https://github.com/jqlang/jq/releases/download/jq-1.5/jq-linux64
 
