--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 dependency_scanning:
-  image: antzsnyk/gradle-snyk-nodejs-20:latest
+  image: antzsnyk/gradle-snyk-nodejs-20
 
   before_script:
   - npm install jq
