--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ dependency_scanning:
     #- chmod +x ./snyk
 
     - snyk auth $SNYK_TOKEN
-    - ./snyk_delta_all_projects.sh --remote-repo-url=$CI_PROJECT_DIR --severity-threshold=medium --print-dep-paths
+    - ./snyk_delta_all_projects.sh --org=${SNYK_BASELINE_ORG_ID} --remote-repo-url=$CI_PROJECT_DIR --severity-threshold=medium --print-dep-paths
     #- snyk monitor --all-projects --org=$SNYK_ORG_ID --remote-repo-url=$CI_PROJECT_DIR # <---the target name in Snyk UI will be <the root dir>
     #- snyk test --json --org=$SNYK_ORG_ID | snyk-to-html -o snyk_results.html
   # Save report to artifacts
