--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,20 +4,13 @@ dependency_scanning:
   stage: test
   script:
 
-    #- npm install -g npm@latest
     - npm install -g snyk
     - npm install -g snyk-delta
-    #- npm install snyk-to-html -g
-    # Run snyk help, snyk auth, snyk monitor, snyk test to break build and out report
-
-    #- snyk --help
-    #- curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
-    #- chmod +x ./snyk
 
     - snyk auth $SNYK_TOKEN
-    - ./snyk_delta_all_projects.sh --org=${SNYK_BASELINE_ORG_ID} --remote-repo-url=$CI_PROJECT_DIR --severity-threshold=medium --print-dep-paths
-    #- snyk monitor --all-projects --org=$SNYK_ORG_ID --remote-repo-url=$CI_PROJECT_DIR # <---the target name in Snyk UI will be <the root dir>
-    #- snyk test --json --org=$SNYK_ORG_ID | snyk-to-html -o snyk_results.html
+    - ./snyk_delta_all_proje --fail-on=upgradable
+    - snyk monitor --all-projects --org=${SNYK_BASELINE_ORG_ID} --remote-repo-url=$CI_PROJECT_DIR
+
   # Save report to artifacts
   #artifacts:
   #  when: always
