--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'demo*'  # Include any branch starting with demo
+  pull_request:
+    branches:
+      - main
 
 jobs:
   Pipeline-Job:
